feat(chore): add swagger schema to rebitcask app
