# api/chore/schema.go
@@ -1,0 +1,9 @@
+package chore
+
+type rootResponseSchema struct {
+	Message string `json:"message"`
+}
+
+type healthzResponseSchema struct {
+	Message string `json:"message"`
+}
