# api/core/schema.go
@@ -4,3 +4,7 @@ type dataRequestSchema struct {
 	Key   string `json:"key"`
 	Value string `json:"value"`
 }
+
+type dataDeleteSchema struct {
+	Key string `json:"key"`
+}
